# demnselcam

./: .gitignore  .project  build.gradle  dependencies.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
mobile-ui/: .project  build.gradle
mobile-ui/src/main/: AndroidManifest.xml
mobile-ui/src/main/java/com/mobile_ui/: MainHandler.kt  SnapshotApplication.kt
mobile-ui/src/main/java/com/mobile_ui/camera/: CameraGLView.java  CameraHandler.java  CameraThread.java
mobile-ui/src/main/java/com/mobile_ui/injection/: ApplicationComponent.kt
mobile-ui/src/main/java/com/mobile_ui/utilities/: IVCGLLib.java
mobile-ui/src/main/java/com/mobile_ui/view/: CameraFragment.java  IjkplayerFragment.java  MainActivity.java
mobile-ui/src/main/java/com/mobile_ui/viewmodel/: CameraViewModel.kt  IjkplayerViewModel.kt
mobile-ui/src/main/res/anim/: animate_button.xml  custom_overshoot_interpolate.xml
mobile-ui/src/main/res/drawable/: add_music.xml  back_icon.xml  check_circle_24px.xml  close.xml  custom_border.xml  done.xml  flash_auto.xml  flash_off.xml  flash_on.xml  ic_music_shadow.xml  image_placeholder.xml  library_music_icon.xml  mixer_icon.xml  progress_bar.xml  round_button.xml  round_clear.xml  round_corner_preview.xml  round_done.xml  round_pause.xml  round_play.xml  save_icon.xml  settings.xml  slow_motion.xml  snapshot_launcher.xml  switch_camera.xml  trim_icon.xml  twotone_cancel_24px.xml  volume_icon.xml
mobile-ui/src/main/res/layout/: activity_main.xml  camera_fragment.xml  playback_fragment.xml
mobile-ui/src/main/res/navigation/: camera_nav_graph.xml
mobile-ui/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
v9kffmpegutils/: .project  CMakeLists.txt  build.gradle
v9kffmpegutils/src/main/: AndroidManifest.xml
v9kffmpegutils/src/main/cpp/: logjam.h  v9kffmpegutils.cpp
v9kffmpegutils/src/main/cpp/ffmpeg/lib/armeabi-v7a/include/libavutil/: timestamp.h
v9kffmpegutils/src/main/cpp/x264/lib/armeabi-v7a/include/: x264_config.h
v9kffmpegutils/src/main/java/com/v9kffmpegutils/: Library.java  SnapshotToolkit.java
v9kffmpegutils/src/main/res/values/: strings.xml
v9kmedia/: build.gradle
v9kmedia/src/androidTest/java/com/v9kmedia/: ExampleInstrumentedTest.java
v9kmedia/src/main/: AndroidManifest.xml
v9kmedia/src/main/java/com/v9kmedia/v9krecorder/: V9kRecorder.java  V9kRecorderEvents.java  V9kRecorderStates.java
v9kmedia/src/test/java/com/v9kmedia/: ExampleUnitTest.java
v9kstudio/: build.gradle
v9kstudio/src/main/: AndroidManifest.xml
v9kstudio/src/main/java/com/v9kstudio/utils/: AudioCodec.java  AudioDecodeRunnable.java  AudioEncodeRunnable.java  OnTrimedCompleted.java  TrimAudioEvent.java  (+1 more)
v9kview/: .project  build.gradle
v9kview/src/main/: AndroidManifest.xml
(+28 files in other folders)
